# drawio-dv-to-anchor

./: README.md  pyproject.toml
examples/: data-vault.xml  data-vault_anchor.xml  data-vault_anchor_edited.xml
src/drawio_db/: __main__.py  xml.py
